dark mode fix

--- a/assets/dark-mode.css
+++ b/assets/dark-mode.css
@@ -1,6 +1,6 @@
 [data-theme="dark"] {
-  background-color: #111 !important;
-  color: #eee;
+  background-color: #222 !important;
+  color: #ccc;
 }
 
 [data-theme="dark"] .bg-light {
@@ -8,9 +8,13 @@
 }
 
 [data-theme="dark"] .bg-white {
-  background-color: #000 !important;
+  background-color: #222 !important;
 }
 
 [data-theme="dark"] .bg-black {
-  background-color: #eee !important;
+  background-color: #ccc !important;
+}
+
+[data-theme="dark"] .card {
+  background-color: #222 !important;
 }
